# siMu_atm

analysis/: CR_flux_model.md  MupageAnalysis.py  analyze.py  config.py  quick_draw_costhz.py  quick_draw_spectrum.py
analysis/MIP2024/: CorsikaSamples.py  MupageSamples.py  PrimaryFluxModels.py  SeaLevelSamples.py  analyze.py  config.py  oldSeaLevelSamples.py  utils.py
analysis/cmo/: PrimaryFluxModels.py  analyze.py  analyze_old_data.py  compare_primary.py  config.py
analysis/quick_draw/: quick_draw_costhz.py  quick_draw_spectrum.py
c8sim/: CMakeLists.txt  initial_energy_generator.hpp
c8sim/analysis/: utils.py
c8sim/analysis/cmo/: PrimaryFluxModels.py  config.py
c8sim/analysis/quick_draw/: quick_draw_costhz.py
detector_sim/ana_string/reco_one_string/: CMakeLists.txt  README.md  filter.cpp  filter.hpp  fit.cpp  process_g4_npe.cpp  qe.csv  root_editor.cpp  root_editor.hpp
detector_sim/ana_string/reco_one_string/all_in_one/: analysis.cc
detector_sim/ana_string/reco_one_string/app/: CMakeLists.txt  analysis.cc  analysis.cpp
detector_sim/ana_string/reco_one_string/filter/: analysis.cc
detector_sim/ana_string/reco_one_string/fit/: analysis.cc
detector_sim/ana_string/reco_one_string/include/: Logging.hpp  Utils.hpp  filter.hpp  process_g4_npe.hpp  root_editor.hpp
detector_sim/ana_string/reco_one_string/include/trident/: DataFormats.hpp  TridentHits.hpp  fit.hpp
detector_sim/ana_string/reco_one_string/process_npe/: analysis.cc
detector_sim/ana_string/reco_one_string/scripts/: ovelay.py  overlay_TH1_matplotlib.py  overlay_graph.py  overlay_root_TH1.py  parse_mc_event.py  prepare_data.py
detector_sim/ana_string/reco_one_string/scripts/notebooks/: BDT.ipynb  get_muon_flux.ipynb  inspect_data.ipynb  test.parquet
detector_sim/ana_string/reco_one_string/scripts/notebooks/.ipynb_checkpoints/: inspect_data-checkpoint.ipynb
detector_sim/ana_string/reco_one_string/src/: CMakeLists.txt  Logging.cpp  TridentHits.cpp  filter.cpp  fit.cpp  process_g4_npe.cpp  root_editor.cpp
detector_sim/ana_string/string_hit/pick_strings/: CMakeLists.txt  get_hit_string.cpp  pick_string_job.sh
detector_sim/anatomy_of_string/: CMakeLists.txt  load_root.cpp  test_survive.sh
detector_sim/anatomy_of_string/anatomy_of_the_death/: contact_dead_muons.py  scene_restoration.py  utils.py
detector_sim/anatomy_of_string/count_string/: count_hitted_string.py  pick_up_string.py
detector_sim/trigger_analysis/L1_trigger/: L1_rate.ipynb  L1_rate.py  utils.py
detector_sim/trigger_analysis/L1_trigger/mu_k40/: draw_muk40.py  time_estimate.py
old_analysis/: MupageAnalysis.py  analyze.py  config.py  utils.py
test_proton/: CMakeLists.txt  c8_air_shower.cpp  initial_energy_generator.hpp
